Sat Jul 26 11:01:26 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - pass no-double cube value so money game rollouts of
	  cube decisions give correct equity
	
Sat Jul 26 12:58:31 2003  Joern Thyssen  <jth@gnubg.org>

	Remove toolbar from "inside" of board.

	* gtktoolbar.c: new file
	* gtkboard.c: move toolbar related code to gtkboolbar.c
	* Makefile.am: new file gtktoolbar.c
	* gtkgame.c: add toolbar to main window.

Sat Jul 26 11:05:25 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (Cl2CfMoney): fix bug in calculation of cubeless equity.
	(reported by Ned Cross)

Fri Jul 25 21:04:58 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (FinishMove): new function.
	* gtkgame.c (InitGTK): new menu item and accelerator for finish move.
	(bug #4278 by Erik Barfoed)

Fri Jul 25 20:49:07 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandSaveSettings): add some qoutes around %s in
	'set rng file %s'. This is a possible fix for bug #4393.
	(bug #4393 reported by William Maslen)

Fri Jul 25 20:22:06 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (LuckFirst): fix bug in calculation of luck for
	the first roll in match play with asymmetric scores.
	(reported by Peter Eberhard)

Fri Jul 25 16:51:08 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (printHTMLBoardBBS, printHTMLBoardGNU, printHTMLBoardF2H):
	print pip counts above position ID. Print position ID and match ID with
	a smaller font.
	* html.c: finish implementation of external CSS style sheet.

Fri Jul 25 16:35:48 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c: widget did not update when pressing who's
	was on roll.
	* bearoff.c (ReadSconyers15x15): remove debug print.
	(reported by Hugh Sconyers)
	
Fri Jul 25 07:53:09 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c (FormatStatEquity,FormatStatCubeError): Remove verbose
	zeros in summary.

Thu Jul 24 19:41:23 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (DumpGameList): show dice for MOVE_SETDICE.
