@@ -1,3 +1,8 @@
+Sat Jul 26 13:37:53 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* htmlimages.c (CommandExportHTMLImages): draw labels on picture.
+	* html.c (printHTMLBoardGNU): labels are now on pictures.
+
 Sat Jul 26 11:01:26 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
 
 	* rollout.c - pass no-double cube value so money game rollouts of
